--- a/styles/main.css
+++ b/styles/main.css
@@ -18,12 +18,12 @@ nav .nav-wrapper ul.right li a {
     margin-right: 2em;
     font-weight: bold;
 }
-<<<<<<< HEAD
 img {
     transition: all 3s ease;
 }
-=======
->>>>>>> 5af0921b42271bf18d884d6bd9fedc364ae3949b
+ul#mobile-demo {
+    background-color: rgba(153, 176, 173, 0.93);
+}
 .container {
     display: block;
     padding: 20px;
@@ -55,12 +55,9 @@ img {
 .nav-wrapper a .material-icon {
     background-color: #5CACA5;
 }
-<<<<<<< HEAD
 .album-modal {
     background-color: rgba(153, 176, 173, 0.93);
 }
-=======
->>>>>>> 5af0921b42271bf18d884d6bd9fedc364ae3949b
 .albums-items {
     margin-top: 20px;
 }
@@ -90,8 +87,8 @@ img {
 }
 .btn-fb-login {
     position: absolute;
-    left: 97%;
-    top: -20%;
+    left: 92%;
+    top: -10%;
 }
 .card, .card-image {
     overflow: visible;
@@ -168,13 +165,10 @@ img {
 #album-head {
     margin-top: 20px;
 }
-<<<<<<< HEAD
 #album-head .card, #main-splash .card {
     margin-top: 20px;
     border-radius: 15px 50px 30px 5px;
 }
-=======
->>>>>>> 5af0921b42271bf18d884d6bd9fedc364ae3949b
 #main-splash .card {
     position: absolute;
     top: 40%;
